--- a/.ideavimrc
+++ b/.ideavimrc
@@ -63,6 +63,7 @@ map <leader>a :action Annotate<CR>
 map <leader>b :action Back<CR>
 map <leader>f :action Forward<CR>
 map <leader>s :action FileStructurePopup<CR>
+map <leader>vc :action Vcs.QuickListPopupAction<CR>
 
 " ================================================================
 " Tools
