--- a/.ideavimrc
+++ b/.ideavimrc
@@ -67,7 +67,14 @@ map <leader>a :action Annotate<CR>
 map <leader>b :action Back<CR>
 map <leader>f :action Forward<CR>
 map <leader>s :action FileStructurePopup<CR>
+
+" ================================================================
+" Version Control
+" ================================================================
+
 map <leader>vc :action Vcs.QuickListPopupAction<CR>
+map <leader>u :action Vcs.UpdateProject<CR>
+map <leader>c :action Vcs.Push<CR>
 
 " ================================================================
 " Tools
