Add open vim settings on win and run shortcut

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -66,6 +66,7 @@ nnoremap gO O<Esc>j
 map <leader>a :action Annotate<CR>
 map <leader>b :action Back<CR>
 map <leader>f :action Forward<CR>
+mpa <leader>r :action ChooseRunConfiguration<CR>
 map <leader>s :action FileStructurePopup<CR>
 
 " ================================================================
@@ -90,6 +91,10 @@ map <leader>l :action Tool_External Tools_pylint<CR>
 
 " Edit ideavim config
 map <leader>ve :e ~/.ideavimrc<CR>
+" Edit ideavim config Win why %HOMEPATH% fails?
+map <leader>vew :e /Users/jan.chwiejczak/.ideavimrc<CR>
 
 " Reload .ideavimrc
 map <leader>vr :source ~/.ideavimrc<CR>
+" Reload .ideavimrc Win
+map <leader>vrw :e /Users/jan.chwiejczak/.ideavimrc<CR>
