--- a/.ideavimrc
+++ b/.ideavimrc
@@ -16,6 +16,7 @@ set incsearch   " search as characters are entered
 set hlsearch    " highlight matches
 set ignorecase  " ignore case when searching
 set smartcase   " ignore case if search pattern is all lowercase, case-sensitive otherwise
+set visualbell  " use visual bell instead of beeping
 
 " ================================================================
 " Movement
@@ -29,12 +30,16 @@ nnoremap k gk
 nnoremap g; :action VcsShowNextChangeMarker<CR>
 nnoremap g, :action VcsShowPrevChangeMarker<CR>
 
+" Easy navigation between highlighted errors
+nnoremap e :action GotoNextError<CR>
+nnoremap E :action GotoPreviousError<CR>
+
 " Easy navigation between functions/methods
 nnoremap ] :action MethodDown<CR>
 nnoremap [ :action MethodUp<CR>
 
 " Press s to activate AceJump
-map s :action AceAction<CR>
+nnoremap s :action AceAction<CR>
 
 " ================================================================
 " Editing
@@ -58,43 +63,47 @@ nnoremap ' :action ShowBookmarks<CR>
 nnoremap go o<Esc>k
 nnoremap gO O<Esc>j
 
+" Move block of text in visual mode without re-selecting
+vnoremap < <gv
+vnoremap > >gv
+
 " ================================================================
 " Actions
 " :actionlist [pattern] find IDE actions by pattern name
 " ================================================================
 
-map <leader>a :action Annotate<CR>
-map <leader>b :action Back<CR>
-map <leader>f :action Forward<CR>
-map <leader>r :action ChooseRunConfiguration<CR>
-map <leader>s :action FileStructurePopup<CR>
+nnoremap <leader>a :action Annotate<CR>
+nnoremap <leader>b :action Back<CR>
+nnoremap <leader>f :action Forward<CR>
+nnoremap <leader>r :action ChooseRunConfiguration<CR>
+nnoremap <leader>s :action FileStructurePopup<CR>
 
 " ================================================================
 " Version Control
 " ================================================================
 
-map <leader>vc :action Vcs.QuickListPopupAction<CR>
-map <leader>u :action Vcs.UpdateProject<CR>
-map <leader>c :action Vcs.Push<CR>
+nnoremap <leader>vc :action Vcs.QuickListPopupAction<CR>
+nnoremap <leader>u  :action Vcs.UpdateProject<CR>
+nnoremap <leader>c  :action Vcs.Push<CR>
 
 " ================================================================
 " Tools
 " ================================================================
 
-map <leader>p :action ActivatePythonConsoleToolWindow<CR>
-map <leader>' :action ActivateTerminalToolWindow<CR>
-map <leader>l :action Tool_External Tools_pylint<CR>
+nnoremap <leader>p :action ActivatePythonConsoleToolWindow<CR>
+nnoremap <leader>' :action ActivateTerminalToolWindow<CR>
+nnoremap <leader>l :action Tool_External Tools_pylint<CR>
 
 " ================================================================
 " Control .ideavimrc file
 " ================================================================
 
 " Edit ideavim config
-map <leader>ve :e ~/.ideavimrc<CR>
+nnoremap <leader>ve :e ~/.ideavimrc<CR>
 " Edit ideavim config Win why %HOMEPATH% fails?
-map <leader>vew :e /Users/jan.chwiejczak/.ideavimrc<CR>
+nnoremap <leader>vew :e /Users/jan.chwiejczak/.ideavimrc<CR>
 
 " Reload .ideavimrc
-map <leader>vr :source ~/.ideavimrc<CR>
+nnoremap <leader>vr :source ~/.ideavimrc<CR>
 " Reload .ideavimrc Win
-map <leader>vrw :source /Users/jan.chwiejczak/.ideavimrc<CR>
+nnoremap <leader>vrw :source /Users/jan.chwiejczak/.ideavimrc<CR>
